ADI-48382 - Fixes
