# generated/deployment_services/api/openapi.yaml
@@ -5491,8 +5491,9 @@ components:
         name: name
         action:
           forward:
-            target: target
-          no-pbf: "{}"
+            forward:
+              target: target
+            no-pbf: "{}"
         source_user:
         - source_user
         - source_user
@@ -5828,23 +5829,33 @@ components:
           example: VoIP
           type: string
       type: object
-    traffic_steering_rules_action_forward:
+    traffic_steering_rules_action_forward_forward:
       example:
         target: target
       properties:
         target:
           type: string
       type: object
-    traffic_steering_rules_action:
+    traffic_steering_rules_action_forward:
       example:
         forward:
           target: target
         no-pbf: "{}"
       properties:
         forward:
-          $ref: '#/components/schemas/traffic_steering_rules_action_forward'
+          $ref: '#/components/schemas/traffic_steering_rules_action_forward_forward'
         no-pbf:
           type: object
+      type: object
+    traffic_steering_rules_action:
+      example:
+        forward:
+          forward:
+            target: target
+          no-pbf: "{}"
+      properties:
+        forward:
+          $ref: '#/components/schemas/traffic_steering_rules_action_forward'
       type: object
   securitySchemes:
     scmOAuth:
