# generated/deployment_services/model_traffic_steering_rules_action_forward_forward.go
@@ -1,0 +1,154 @@
+/*
+Network Deployment
+
+These APIs are used for defining and managing Prisma Access Remote Network and Service Connection configurations within Strata Cloud Manager.
+
+API version: 2.0.0
+Contact: support@paloaltonetworks.com
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package deployment_services
+
+import (
+	"encoding/json"
+)
+
+// checks if the TrafficSteeringRulesActionForwardForward type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &TrafficSteeringRulesActionForwardForward{}
+
+// TrafficSteeringRulesActionForwardForward struct for TrafficSteeringRulesActionForwardForward
+type TrafficSteeringRulesActionForwardForward struct {
+	Target               *string `json:"target,omitempty"`
+	AdditionalProperties map[string]interface{}
+}
+
+type _TrafficSteeringRulesActionForwardForward TrafficSteeringRulesActionForwardForward
+
+// NewTrafficSteeringRulesActionForwardForward instantiates a new TrafficSteeringRulesActionForwardForward object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewTrafficSteeringRulesActionForwardForward() *TrafficSteeringRulesActionForwardForward {
+	this := TrafficSteeringRulesActionForwardForward{}
+	return &this
+}
+
+// NewTrafficSteeringRulesActionForwardForwardWithDefaults instantiates a new TrafficSteeringRulesActionForwardForward object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewTrafficSteeringRulesActionForwardForwardWithDefaults() *TrafficSteeringRulesActionForwardForward {
+	this := TrafficSteeringRulesActionForwardForward{}
+	return &this
+}
+
+// GetTarget returns the Target field value if set, zero value otherwise.
+func (o *TrafficSteeringRulesActionForwardForward) GetTarget() string {
+	if o == nil || IsNil(o.Target) {
+		var ret string
+		return ret
+	}
+	return *o.Target
+}
+
+// GetTargetOk returns a tuple with the Target field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *TrafficSteeringRulesActionForwardForward) GetTargetOk() (*string, bool) {
+	if o == nil || IsNil(o.Target) {
+		return nil, false
+	}
+	return o.Target, true
+}
+
+// HasTarget returns a boolean if a field has been set.
+func (o *TrafficSteeringRulesActionForwardForward) HasTarget() bool {
+	if o != nil && !IsNil(o.Target) {
+		return true
+	}
+
+	return false
+}
+
+// SetTarget gets a reference to the given string and assigns it to the Target field.
+func (o *TrafficSteeringRulesActionForwardForward) SetTarget(v string) {
+	o.Target = &v
+}
+
+func (o TrafficSteeringRulesActionForwardForward) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o TrafficSteeringRulesActionForwardForward) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Target) {
+		toSerialize["target"] = o.Target
+	}
+
+	for key, value := range o.AdditionalProperties {
+		toSerialize[key] = value
+	}
+
+	return toSerialize, nil
+}
+
+func (o *TrafficSteeringRulesActionForwardForward) UnmarshalJSON(data []byte) (err error) {
+	varTrafficSteeringRulesActionForwardForward := _TrafficSteeringRulesActionForwardForward{}
+
+	err = json.Unmarshal(data, &varTrafficSteeringRulesActionForwardForward)
+
+	if err != nil {
+		return err
+	}
+
+	*o = TrafficSteeringRulesActionForwardForward(varTrafficSteeringRulesActionForwardForward)
+
+	additionalProperties := make(map[string]interface{})
+
+	if err = json.Unmarshal(data, &additionalProperties); err == nil {
+		delete(additionalProperties, "target")
+		o.AdditionalProperties = additionalProperties
+	}
+
+	return err
+}
+
+type NullableTrafficSteeringRulesActionForwardForward struct {
+	value *TrafficSteeringRulesActionForwardForward
+	isSet bool
+}
+
+func (v NullableTrafficSteeringRulesActionForwardForward) Get() *TrafficSteeringRulesActionForwardForward {
+	return v.value
+}
+
+func (v *NullableTrafficSteeringRulesActionForwardForward) Set(val *TrafficSteeringRulesActionForwardForward) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableTrafficSteeringRulesActionForwardForward) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableTrafficSteeringRulesActionForwardForward) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableTrafficSteeringRulesActionForwardForward(val *TrafficSteeringRulesActionForwardForward) *NullableTrafficSteeringRulesActionForwardForward {
+	return &NullableTrafficSteeringRulesActionForwardForward{value: val, isSet: true}
+}
+
+func (v NullableTrafficSteeringRulesActionForwardForward) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableTrafficSteeringRulesActionForwardForward) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
